WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123822
ObjCCallbackFunctionImpl's NSInvocation shouldn't retain its target or arguments
https://bugs.webkit.org/show_bug.cgi?id=123822
Summary
ObjCCallbackFunctionImpl's NSInvocation shouldn't retain its target or arguments
Mark Hahnenberg
Reported
2013-11-05 13:18:13 PST
This is a memory leak. It also leads to inopportune invocations of -dealloc on the target and arguments when the ObjCCallbackFunctionImpl is destroyed. The fix for this won't handle the second issue. That's what
bug 123821
is for.
Attachments
Patch
(4.13 KB, patch)
2013-11-05 13:21 PST
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2013-11-05 13:18:28 PST
<
rdar://problem/15395956
>
Mark Hahnenberg
Comment 2
2013-11-05 13:21:34 PST
Created
attachment 216066
[details]
Patch
Geoffrey Garen
Comment 3
2013-11-05 14:24:01 PST
Comment on
attachment 216066
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2013-11-05 14:49:56 PST
Comment on
attachment 216066
[details]
Patch Clearing flags on attachment: 216066 Committed
r158695
: <
http://trac.webkit.org/changeset/158695
>
WebKit Commit Bot
Comment 5
2013-11-05 14:49:58 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6
2013-11-06 09:20:30 PST
Comment on
attachment 216066
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=216066&action=review
> Source/JavaScriptCore/API/ObjCCallbackFunction.mm:410 > + // We need to explicity release the target since we didn't call
typo: explicity
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug